--- a/app/sass/pages/_main.sass
+++ b/app/sass/pages/_main.sass
@@ -498,6 +498,7 @@ a
     &--visible
       top: 0
       background-color: rgba(247, 247, 247, .95)
+      z-index: 40
   &__heading
     margin-bottom: 45px
   &__title
